# haeuso

./: .gitignore  README.md  package-lock.json  package.json
apps/api/: .env.example  README.md  pyproject.toml
apps/api/app/: config.py  main.py  pii_guard.py
apps/api/tests/: test_pii_and_guardrail.py  test_stub_mode.py
apps/web/: index.html  package.json
apps/web/src/: App.tsx  api.ts  comfort-service.ts  journal-repository.ts  styles.css
backend/: .env.example  README.md
backend/app/: config.py  constants.py  llm_client.py  main.py  pii_guard.py  schemas.py
backend/app/services/: guardrail.py  messages.py
backend/tests/: test_pii_and_guardrail.py  test_stub_mode.py
frontend/: package.json  vitest.config.ts
frontend/src/: App.tsx  comfort-service.test.ts  constants.ts  journal-repository.test.ts  types.ts
frontend/src/components/: ComfortModal.test.tsx  ComfortModal.tsx  EmojiTimeline.test.tsx  EmojiTimeline.tsx  EmotionSelector.test.tsx  EmotionSelector.tsx  FlushSlider.test.tsx  FlushSlider.tsx  Header.test.tsx  Header.tsx  TextInput.test.tsx  TextInput.tsx  UndoToast.test.tsx  UndoToast.tsx
frontend/src/hooks/: useComfort.test.ts  useComfort.ts  useFlushSlider.test.ts  useFlushSlider.ts  useJournal.test.ts  useJournal.ts
